# Devsync

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  install_pgvector.ps1  package-lock.json  pyproject.toml  requirements.txt  seed_test_data.py
backend/alembic/: env.py
backend/alembic/versions/: 10786d1ead68_add_new_activity_event_types.py  40d24986e937_add_project_id_labels_updated_at_to_.py  42b6f63f6103_create_chunks_table.py  464a12f66091_add_full_text_search.py  4e3c08e33953_initial_schema.py  76af722f9a74_add_activity_logs_table.py  7f4ca6bbd70c_create_notifications_table.py  80a0a0b077ba_enable_pgvector_extension.py  8eb68c1e6c69_update_documents_schema.py  9bed469f649a_add_project_member_and_mute.py  b3f901c278e4_add_soft_delete_to_tasks_and_projects.py
backend/app/: main.py
backend/app/api/: ai.py  analytics.py  auth.py  columns.py  deps.py  documents.py  notifications.py  projects.py  search.py  tasks.py  users.py  websocket.py  workspaces.py
backend/app/core/: activity.py  ai_prompts.py  config.py  dependencies.py  digest.py  embeddings.py  events.py  notifications.py  rag.py  security.py  websocket_manager.py
backend/app/db/: database.py
backend/app/models/: __init__.py  activity_log.py  chunk.py  column.py  comment.py  document.py  notification.py  project.py  project_member.py  task.py  user.py  workspace.py
backend/app/schemas/: ai.py  analytics.py  auth.py  column.py  document.py  notification.py  project.py  search.py  (+4 more)
backend/scripts/: seed.py  test_retrieval.py  test_threshold.py
(+80 files in other folders)
